Added removePossibleValue Fixed display